[gd_scene load_steps=2 format=2]

[ext_resource path="res://VBoxContainer.gd" type="Script" id=1]

[node name="Spatial" type="Spatial"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 562.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 566.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 446.0
margin_right = 474.0
margin_bottom = 20.0
text = "<<"

[node name="Button2" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 478.0
margin_right = 531.0
margin_bottom = 20.0
text = "center"

[node name="Button3" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 535.0
margin_right = 563.0
margin_bottom = 20.0
text = ">>"

[node name="Tween" type="Tween" parent="VBoxContainer"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Button1" to="VBoxContainer" method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Button2" to="VBoxContainer" method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Button3" to="VBoxContainer" method="_on_Button3_pressed"]
